Logout to'liq tayyor. Role permission swaggerdan keyin qo'shiladi !
