# backend/src/routes/routes.ts
@@ -150,6 +150,7 @@ export function RegisterRoutes(app: Router) {
                 id: {"in":"path","name":"id","required":true,"dataType":"double"},
         };
         app.get('/api/v1/users/:id',
+            authenticateMiddleware([{"jwt":["admin","superadmin"]}]),
             ...(fetchMiddlewares<RequestHandler>(UserController)),
             ...(fetchMiddlewares<RequestHandler>(UserController.prototype.getUserById)),
 
